more text added

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-$primary-color: #3cefff;
+$primary-color: #000000;
 
 @import 'animate.css';
 @import '~loaders.css/src/animations/ball-pulse.scss';
