--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -15,7 +15,7 @@ $color-outline: #7f7f7f80;
   background: #c8c8c8;
   justify-content: space-around;
 
-  .text-zone {
+  .header-zone {
     position: relative;
     text-align: center;
     display: flex;
