--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,16 +1,11 @@
 .about-page {
-  animation-delay: 1s;
-  background: #ebebeb;
-  transform-style: preserve-3d;
-  animation: fadeIn 1.5s forwards;
-
   @media screen and (max-width: 768px) {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 
-  .text-zone {
+  .header-zone {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
