--- a/src/components/Featured/index.scss
+++ b/src/components/Featured/index.scss
@@ -4,52 +4,8 @@
   transform-style: preserve-3d;
   animation: fadeIn 1.5s forwards;
   animation-delay: 1s;
-
-  .button-link {
-    display: inline-block;
-    padding: 1rem 2rem;
-    border-radius: 10rem;
-    background-color: transparent;
-    color: #000;
-    font-size: 1.2rem;
-    font-weight: 400;
-    margin: 2rem 0;
-    letter-spacing: 0.15rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all 0.45s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-
-    &:hover {
-      color: #fff;
-    }
-  }
-
-  .button-link::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background: #1b1c1e;
-    z-index: -1;
-    border-radius: 10rem;
-    transition: 0.45 ease all;
-    transform: scale(0, 1);
-    transform-origin: top right;
-    transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
-    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  }
-
-  .button-link:hover::after {
-    transform: scale(1, 1);
-    transform-origin: top left;
-  }
-
-  .text-zone {
+  
+  .header-zone {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -74,7 +30,6 @@
       align-items: center;
       justify-content: center;
       border-radius: 8px;
-      border: 1px solid #000;
       position: relative;
       font-size: 1.9rem;
 
