--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,19 +10,6 @@
   position: relative;
 }
 
-.previous-link {
-  position: relative;
-  right: 40%;
-  margin: 2rem 0;
-  font-weight: 400;
-  font-size: 2rem;
-
-  .text {
-    color: #000;
-    text-decoration: none;
-  }
-}
-
 .hide {
   display: none;
 }
@@ -48,29 +35,50 @@
   }
 }
 
-.slidepop-up {
-  transition: all 0.4s ease-in-out;
+.button-link {
+  display: inline-block;
+  padding: 1rem 2rem;
+  border-radius: 10rem;
+  background-color: transparent;
+  color: #000;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 2rem 0;
+  letter-spacing: 0.15rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.45s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
 
   &:hover {
-    transform: translateY(-220px);
+    color: #fff;
   }
 }
 
-.slidepop-left {
-  transition: all 0.4s ease-in-out;
-
-  &:hover {
-    transform: translateX(+50px);
-  }
+.button-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: #1b1c1e;
+  z-index: -1;
+  border-radius: 10rem;
+  transition: 0.45 ease all;
+  transform: scale(0, 1);
+  transform-origin: top right;
+  transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
 }
 
-.slidepop-right {
-  transition: all 0.4s ease-in-out;
-
-  &:hover {
-    transform: translateX(-50px);
-  }
+.button-link:hover::after {
+  transform: scale(1, 1);
+  transform-origin: top left;
 }
+
 
 .container {
   width: 90%;
@@ -105,7 +113,7 @@
   justify-content: center;
   padding: 3rem 0;
 
-  .text-zone {
+  .header-zone {
     position: relative;
     text-align: center;
     display: flex;
@@ -172,15 +180,6 @@
       }
       &:nth-of-type(4) {
         animation-delay: 1.4s;
-      }
-      &:nth-of-type(5) {
-        animation-delay: 1.5s;
-      }
-      &:nth-of-type(6) {
-        animation-delay: 1.6s;
-      }
-      &:nth-of-type(7) {
-        animation-delay: 1.7s;
       }
     }
 
