--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -1,139 +1,160 @@
 .projects-page {
+  height: auto;
+  padding: 0px;
+
+  .header-zone {
+    width: 100%;
+    margin: 2.5rem 0;
+    text-align: center;
+
+    h1 {
+      margin-bottom: 2px;
+    }
+    h2 {
+      font-size: 2.2rem;
+      letter-spacing: 0px;
+    }
+  }
+
+  .project-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 400px;
     height: auto;
-    padding: 0px;
-  
-    .text-zone {
+
+    @media screen and (max-width: 800px) {
+      width: 400px;
+    }
+  }
+
+  .overview {
+    width: 55%;
+    color: #000;
+    text-align: left;
+    display: flex;
+    height: fit-content;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    font-size: 1.9rem;
+
+    @media screen and (max-width: 800px) {
       width: 100%;
-      margin: 2.5rem 0;
       text-align: center;
-  
-      h1 {
-        margin-bottom: 2px;
-      }
-      h2 {
-        font-size: 2.2rem;
-        letter-spacing: 0px;
-      }
-    }
-  
-    .project-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      width: 500px;
-      height: auto;
-  
-      @media screen and (max-width: 800px) {
-        width: 400px;
-      }
-    }
-  
-    .overview {
-      width: 55%;
-      color: #000;
-      text-align: left;
-      display: flex;
-      height: fit-content;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      border-radius: 8px;
-      border: 1px solid #000;
-      position: relative;
-      font-size: 1.9rem;
-  
-      .message,
-      .goals,
-      .role,
-      .tools {
-        width: 95%;
-        display: flex;
-        flex-direction: column;
+      z-index: 9999;
+      width: 80%;
+      padding: 2rem 3rem;
+    }
+
+    .wrapper {
+      width: 70%;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-around;
+
+      @media screen and (max-width: 800px) {
+        width: 100%;
+        text-align: left;
+        font-size: 1.4rem;
       }
-  
-      h3.overview-subheaders {
-        font-size: 2.1rem;
+    }
+
+    h1 {
+      font-size: 2.6rem;
+      text-transform: uppercase;
+    }
+
+    .message,
+    .goals,
+    .role,
+    .tools {
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+
+      h3 {
+        font-size: 1.8rem;
+        text-transform: uppercase;
         color: #000000;
         margin-bottom: 0px;
-        font-weight: 500;
-        margin-left: 2rem;
+        font-weight: 800;
         text-decoration: wavy;
       }
-  
+
+      p {
+        margin: 1rem 0;
+      }
+
       @media screen and (max-width: 800px) {
-        flex-direction: column;
-        z-index: 9999;
-        width: 80%;
-        padding: 2rem 3rem;
-  
-        .message,
-        .goals,
-        .role,
-        .tools {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-        }
-      }
-    }
-  
-    .overview-col {
-      width: 95%;
-      color: #000;
-      text-align: left;
-      display: flex;
-      height: fit-content;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-evenly;
-      border-radius: 8px;
-      position: relative;
-      font-size: 1.9rem;
-  
-      .subphoto {
-        width: 300px;
-        position: relative;
-  
-        @media screen and (max-width: 800px) {
-          width: 100px;
-          display: flex;
-          flex-direction: row;
-          position: relative;
-        }
-      }
-  
-      .message,
-      .imgcontainer {
-        width: 50%;
-        margin: 0 4rem;
-        display: flex;
-        flex-direction: column;
-  
-        @media screen and (max-width: 800px) {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-        }
-      }
-  
-      h3.overview-subheaders {
-        font-size: 2.1rem;
-        color: #000;
-        margin-bottom: 0px;
-        font-weight: 600;
-        margin-left: 2rem;
-        text-decoration: wavy;
-  
-        @media screen and (max-width: 800px) {
-          text-align: center;
-        }
-      }
-  
-      @media screen and (max-width: 800px) {
-        flex-direction: column;
-        padding: 2rem 3rem;
+        width: 100%;
+        font-size: 1.4rem;
       }
     }
   }
-  
+
+  .overview-col {
+    width: 95%;
+    color: #000;
+    display: flex;
+    height: fit-content;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 8px;
+    position: relative;
+    font-size: 1.9rem;
+
+    .wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    .message {
+      width: 50%;
+      padding: 0 3rem;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      @media screen and (max-width: 800px) {
+        width: 80%;
+        font-size: 1.4rem;
+      }
+
+      h3 {
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        color: #000000;
+        margin-bottom: 0px;
+        font-weight: 800;
+        text-decoration: wavy;
+      }
+
+      p {
+        margin: 1rem 0;
+      }
+    }
+
+    .subphoto {
+      width: 300px;
+      position: relative;
+
+      @media screen and (max-width: 800px) {
+        width: 100px;
+        display: flex;
+        flex-direction: row;
+        position: relative;
+      }
+    }
+  }
+}
