--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -1,7 +1,7 @@
 .animate-text {
     display: inline-block;
     opacity: 0;
-    animation: bounceIn 1s 1s;
+    animation: fadeIn 1s 1s;
     animation-fill-mode: forwards;
     min-width: 10px;
 }
