--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -43,7 +43,7 @@
   color: #000;
   font-size: 1.2rem;
   font-weight: 400;
-  margin: 2rem 0;
+  margin: 3rem 0;
   letter-spacing: 0.15rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -166,8 +166,7 @@
       font-weight: 400;
       min-width: fit-content;
       left: 20px;
-      animation: pulse 1s 1s;
-      animation-fill-mode: forwards;
+      animation: fadeIn 2s 2s backwards;
 
       &:nth-of-type(1) {
         animation-delay: 1.1s;
