--- a/src/components/Featured/index.scss
+++ b/src/components/Featured/index.scss
@@ -16,7 +16,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      width: 350px;
+      width: 250px;
       height: auto;
     }
 
@@ -33,7 +33,6 @@
       font-size: 1.9rem;
       animation: fadeIn 2s 2s backwards;
 
-
       @media screen and (max-width: 800px) {
         width: 100%;
         text-align: center;
@@ -41,6 +40,13 @@
         z-index: 9999;
         width: 80%;
         padding: 2rem 3rem;
+      }
+
+      h2 {
+        width: 70%;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
       }
 
       .wrapper {
