--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -2,8 +2,9 @@
   height: auto;
   padding: 0px;
 
-  .intro {
+  .rowDiv {
     display: flex;
+    margin: 3.5rem 0;
     flex-direction: row;
     justify-content: space-around;
 
@@ -46,6 +47,15 @@
     }
   }
 
+  .iconphoto {
+    width: 50px;
+    height: auto;
+
+    @media screen and (max-width: 800px) {
+      width: 25px;
+    }
+  }
+
   .overview {
     width: 55%;
     color: #000;
@@ -67,6 +77,17 @@
       z-index: 9999;
       width: 80%;
       padding: 2rem 3rem;
+    }
+
+    .zoomedimg {
+      width: 250px;
+      border-radius: 8px;
+      height: auto;
+
+      @media screen and (max-width: 800px) {
+        width: 150px;
+        height: auto;
+      }
     }
 
     .link-group {
@@ -106,14 +127,15 @@
     .role,
     .tools {
       width: 90%;
+      margin: 0 1.2rem;
       display: flex;
       flex-direction: column;
 
       h3 {
         font-size: 2.2rem;
+        margin: 0;
         text-transform: uppercase;
         color: #000000;
-        margin-bottom: 0px;
         font-weight: 800;
         text-decoration: wavy;
 
