--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -1,6 +1,20 @@
-.projects-page {
+.go-genesis {
   height: auto;
   padding: 0px;
+  color: #fff;
+  background: #8b0f0f;
+
+  .button-link {
+    color: #fff;
+    border: 1px solid #fff;
+
+    &:hover {
+      color: black;
+    }
+  }
+  .button-link::after {
+    background: #fff;
+  }
 
   .rowDiv {
     display: flex;
@@ -26,9 +40,11 @@
     text-align: center;
 
     h1 {
+      color: #fff;
       margin-bottom: 2px;
     }
     h2 {
+      color: #fff;
       font-size: 2.2rem;
       letter-spacing: 0px;
     }
@@ -58,7 +74,6 @@
 
   .overview {
     width: 55%;
-    color: #000;
     text-align: left;
     display: flex;
     height: fit-content;
@@ -68,7 +83,6 @@
     position: relative;
     font-size: 1.9rem;
     animation: fadeIn 2s 2s backwards;
-
 
     @media screen and (max-width: 800px) {
       width: 100%;
@@ -135,7 +149,6 @@
         font-size: 2.2rem;
         margin: 0;
         text-transform: uppercase;
-        color: #000000;
         font-weight: 800;
         text-decoration: wavy;
 
@@ -162,7 +175,6 @@
 
   .overview-col {
     width: 95%;
-    color: #000;
     display: flex;
     height: fit-content;
     flex-direction: column;
@@ -204,7 +216,6 @@
       h3 {
         font-size: 2.2rem;
         text-transform: uppercase;
-        color: #000000;
         margin-bottom: 0px;
         font-weight: 800;
         text-decoration: wavy;
