--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -16,6 +16,14 @@
     background: #fff;
   }
 
+  .vd {
+    border-left: 2px solid #ffffff60;
+  }
+  
+  .hd {
+    border-bottom: 1px solid #ffffff60;
+  }
+
   .rowDiv {
     display: flex;
     margin: 3.5rem 0;
@@ -82,6 +90,7 @@
     justify-content: center;
     position: relative;
     font-size: 1.9rem;
+    z-index: 0;
     animation: fadeIn 2s 2s backwards;
 
     @media screen and (max-width: 800px) {
