--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -4,42 +4,15 @@
   color: #fff;
   background: #8b0f0f;
 
-  .button-link {
-    color: #fff;
-    border: 1px solid #fff;
-
-    &:hover {
-      color: black;
-    }
-  }
-  .button-link::after {
-    background: #fff;
-  }
-
-  .vd {
-    border-left: 2px solid #ffffff60;
-  }
+  .animate-text-hover {
+    min-width: 10px;
+    display: inline-block;
+    animation-fill-mode: both;
   
-  .hd {
-    border-bottom: 1px solid #ffffff60;
-  }
-
-  .rowDiv {
-    display: flex;
-    margin: 3.5rem 0;
-    flex-direction: row;
-    justify-content: space-around;
-
-    @media screen and (max-width: 800px) {
-      flex-direction: column;
-      align-items: center;
+    &:hover {
+      animation: rubberBand 1s;
+      color: #ff2c2c;
     }
-  }
-
-  .project-detail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .header-zone {
@@ -55,205 +28,6 @@
       color: #fff;
       font-size: 2.2rem;
       letter-spacing: 0px;
-    }
-  }
-
-  .project-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 400px;
-    height: auto;
-
-    @media screen and (max-width: 800px) {
-      width: 250px;
-    }
-  }
-
-  .iconphoto {
-    width: 50px;
-    height: auto;
-
-    @media screen and (max-width: 800px) {
-      width: 25px;
-    }
-  }
-
-  .overview {
-    width: 55%;
-    text-align: left;
-    display: flex;
-    height: fit-content;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    position: relative;
-    font-size: 1.9rem;
-    z-index: 0;
-    animation: fadeIn 2s 2s backwards;
-
-    @media screen and (max-width: 800px) {
-      width: 100%;
-      text-align: center;
-      flex-direction: column;
-      z-index: 9999;
-      width: 80%;
-      padding: 2rem 3rem;
-    }
-
-    .zoomedimg {
-      width: 250px;
-      border-radius: 8px;
-      height: auto;
-
-      @media screen and (max-width: 800px) {
-        width: 150px;
-        height: auto;
-      }
-    }
-
-    .link-group {
-      display: flex;
-      width: 100%;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-evenly;
-
-      @media screen and (max-width: 800px) {
-        width: 100%;
-        font-size: 1rem;
-      }
-    }
-
-    .wrapper {
-      width: 90%;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: space-around;
-
-      @media screen and (max-width: 800px) {
-        width: 100%;
-        text-align: left;
-        font-size: 1.4rem;
-      }
-    }
-
-    h1 {
-      font-size: 2.6rem;
-      text-transform: uppercase;
-    }
-
-    .message,
-    .goals,
-    .role,
-    .tools {
-      width: 90%;
-      margin: 0 1.2rem;
-      display: flex;
-      flex-direction: column;
-
-      h3 {
-        font-size: 2.2rem;
-        margin: 0;
-        text-transform: uppercase;
-        font-weight: 800;
-        text-decoration: wavy;
-
-        @media screen and (max-width: 800px) {
-          font-size: 1.8rem;
-        }
-      }
-
-      p {
-        font-size: 1.8rem;
-        margin: 1rem 0;
-
-        @media screen and (max-width: 800px) {
-          font-size: 1.4rem;
-        }
-      }
-
-      @media screen and (max-width: 800px) {
-        width: 100%;
-        font-size: 1.4rem;
-      }
-    }
-  }
-
-  .overview-col {
-    width: 95%;
-    display: flex;
-    height: fit-content;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    border-radius: 8px;
-    position: relative;
-    font-size: 1.9rem;
-
-    .sketches {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-
-    .wrapper {
-      width: 100%;
-      display: flex;
-      margin: 2rem 0;
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: space-around;
-    }
-
-    .message {
-      width: 50%;
-      padding: 0 3rem;
-      text-align: left;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center;
-
-      @media screen and (max-width: 800px) {
-        width: 80%;
-        font-size: 1.4rem;
-      }
-
-      h3 {
-        font-size: 2.2rem;
-        text-transform: uppercase;
-        margin-bottom: 0px;
-        font-weight: 800;
-        text-decoration: wavy;
-
-        @media screen and (max-width: 800px) {
-          font-size: 1.8rem;
-        }
-      }
-
-      p {
-        font-size: 1.8rem;
-        margin: 1rem 0;
-
-        @media screen and (max-width: 800px) {
-          font-size: 1.4rem;
-        }
-      }
-    }
-
-    .subphoto {
-      width: 300px;
-      position: relative;
-
-      @media screen and (max-width: 800px) {
-        width: 100px;
-        display: flex;
-        flex-direction: row;
-        position: relative;
-      }
     }
   }
 }
