--- a/src/components/Projects/inHandy/index.scss
+++ b/src/components/Projects/inHandy/index.scss
@@ -2,13 +2,12 @@
   height: auto;
   padding: 0px;
   color: #111213;
-  background: #7de9ff;
 
   .animate-text-hover {
     min-width: 10px;
     display: inline-block;
     animation-fill-mode: both;
-  
+
     &:hover {
       animation: rubberBand 1s;
       color: #1f4cff;
@@ -44,7 +43,7 @@
 
   .header-zone {
     width: 100%;
-    margin: 0 0 1rem 0;
+    margin: 0 0 3rem 0;
     text-align: center;
 
     h1 {
@@ -61,8 +60,127 @@
   .overview-col {
     align-items: center;
 
+    .character-img {
+      width: 400px;
+
+      @media screen and (max-width: 800px) {
+        width: 300px;
+      }
+    }
+
+    ul.cool-list {
+      width: 70%;
+      padding: 0;
+      margin: 1.5rem 2rem;
+      font-size: 1.2rem;
+      font-weight: 400;
+      display: flex;
+      list-style: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      @media screen and (max-width: 800px) {
+        font-size: 0.9rem;
+      }
+
+      li {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 0.5rem;
+        margin: 0.5rem;
+        border: solid 1px #1129ff;
+        background: #7a94fd;
+        color: white;
+        border-radius: 4px;
+
+        svg {
+          margin: 0 2rem 0 0;
+        }
+
+        filter: drop-shadow(4px 4px 8px #999999);
+      }
+    }
+
+    ul.good-list {
+        width: 70%;
+        padding: 0;
+        margin: 1.5rem 2rem;
+        font-size: 1.2rem;
+        font-weight: 400;
+        display: flex;
+        list-style: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+  
+        @media screen and (max-width: 800px) {
+          font-size: 0.9rem;
+        }
+  
+        li {
+          display: flex;
+          align-items: center;
+          width: 100%;
+          padding: 0.5rem;
+          margin: 0.5rem;
+          border: solid 1px #18ce1b;
+          background: #11d011;
+          color: white;
+          border-radius: 4px;
+  
+          svg {
+            margin: 0 2rem 0 0;
+          }
+  
+          filter: drop-shadow(2px 2px 3px #bdbdbd);
+        }
+      }
+
+    ul.wrong-list {
+      width: 70%;
+      padding: 0;
+      margin: 1.5rem 2rem;
+      font-size: 1.2rem;
+      font-weight: 400;
+      display: flex;
+      list-style: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      @media screen and (max-width: 800px) {
+        font-size: 0.9rem;
+      }
+
+      li {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 0.5rem;
+        margin: 0.5rem;
+        color: white;
+        border: solid 1px #ff0000;
+        background: #ff0808b6;
+        border-radius: 4px;
+
+        svg {
+          color: white;
+          font-size: 1.4rem;
+          margin: 0 2rem 0 0;
+        }
+      }
+    }
+
+    .track-link {
+      cursor: pointer;
+      text-decoration: none;
+      width: 100%;
+    }
+
     .drawnplan {
-      width: 800px;
+      width: 900px;
       display: flex;
       border-radius: 4px;
       justify-content: center;
