--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -27,6 +27,38 @@
   }
 }
 
+.vibrate {
+  &:hover {
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+
+  @keyframes shake {
+    10%,
+    90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+
+    20%,
+    80% {
+      transform: translate3d(2px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+
+    40%,
+    60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
+}
+
 .grow {
   transition: all 0.2s ease-in-out;
 
@@ -48,6 +80,14 @@
   border-bottom: 1px solid #00000060;
   margin: 4rem 0 8rem 0;
   width: 90%;
+}
+
+.shortdivider {
+  position: relative;
+  right: 40%;
+  border-bottom: 4px solid #70b5b5;
+  margin: 8rem 0 2rem 0;
+  width: 70px;
 }
 
 .button-link {
@@ -173,9 +213,9 @@
     h1 {
       font-size: 5rem;
       cursor: pointer;
-      font-family: "Coolvetica";
+      font-family: sans-serif;
       color: #000;
-      font-weight: 400;
+      font-weight: 900;
       margin: 0;
       position: relative;
     }
@@ -195,10 +235,10 @@
     }
 
     p {
-      font-size: 16px;
+      font-size: 1.4rem;
       color: #000;
       font-family: sans-serif;
-      font-weight: 400;
+      font-weight: 100;
       min-width: fit-content;
       left: 20px;
       animation: fadeIn 2s 2s backwards;
@@ -230,6 +270,11 @@
       }
     }
   }
+}
+
+.iconimg {
+  width: 20px;
+  image-rendering: pixelated;
 }
 
 .soundcloud-ui,
@@ -399,11 +444,6 @@
       display: flex;
       flex-direction: column;
 
-      .iconimg {
-        width: 20px;
-        image-rendering: pixelated;
-      }
-
       p {
         font-size: 1.8rem;
         margin: 1rem 0;
@@ -465,10 +505,24 @@
     position: relative;
     font-size: 1.9rem;
 
+    @media screen and (max-width: 800px) {
+      width: 80%;
+      align-items: center;
+      font-size: 1.2rem;
+    }
+
     .sketches {
       width: 100%;
       height: 300px;
       object-fit: cover;
+    }
+
+    .shortdivider {
+      position: relative;
+      right: 0%;
+      border-bottom: 4px solid #70b5b5;
+      margin: 3rem 0 3rem 0;
+      width: 70px;
     }
 
     .message {
