--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -172,7 +172,7 @@
   flex-wrap: wrap;
   margin: 0 0 3rem 0;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .home-page,
@@ -235,12 +235,10 @@
     }
 
     p {
-      font-size: 1.4rem;
+      font-size: 1.8rem;
       color: #000;
       font-family: sans-serif;
-      font-weight: 100;
       min-width: fit-content;
-      left: 20px;
       animation: fadeIn 2s 2s backwards;
 
       &:nth-of-type(1) {
