--- a/src/components/ArrowToTop/index.scss
+++ b/src/components/ArrowToTop/index.scss
@@ -1,13 +1,13 @@
 .to-top {
   position: fixed;
   z-index: 9999999;
-  color: #00000067;
+  color: #ffffff90;
   font-size: 3rem;
   bottom: 5%;
   right: 5%;
 
   &:hover {
-    color: #000000;
+    color: #ffffff;
     animation-duration: 1.2s;
   }
 
