--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,8 +1,34 @@
 .about-page {
+  z-index: 9;
+
+  ul.ui-list {
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    li {
+      width: fit-content;
+      margin: 1rem;
+      padding: 1.5rem;
+      color: #fff;
+      border: 1px solid #000;
+      border-radius: 100px;
+      background: #384a537f;
+    }
+  }
+
   @media screen and (max-width: 768px) {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .border-list {
+    border-left: 5px solid #afe4ff;
+    padding-left: 4rem;
+    margin: 2rem 0;
   }
 
   .header-zone {
@@ -30,7 +56,7 @@
         width: 300px;
         margin-bottom: 24px;
         border-radius: 50%;
-        border: 1px solid #000000;
+        border: 1px solid #fff;
 
         @media screen and (max-width: 800px) {
           width: 200px;
@@ -69,45 +95,28 @@
           flex-direction: column;
         }
 
-        h3.overview-subheaders {
-          font-size: 2.4rem;
-          color: #000;
+        h1 {
+          font-size: 1.8rem;
+          color: #fff;
           text-align: left;
           font-weight: 600;
           margin: 0px;
-          text-decoration: wavy;
         }
 
-        ul {
-          list-style: none;
+        h2 {
+          font-size: 1.5rem;
+          color: #afe4ff;
           text-align: left;
-          margin-bottom: 2px;
-          padding: 0px;
-
-          li {
-            p {
-              color: #000;
-              margin-bottom: 0px;
-            }
-            h4 {
-              margin: 0px;
-              color: #000;
-              text-decoration: none;
-            }
-            h5 {
-              margin: 0px;
-              color: #000;
-            }
-          }
+          font-weight: 300;
+          margin: 0px;
         }
 
-        @media screen and (max-width: 800px) {
-          flex-direction: column;
-          padding: 1rem 0;
-          position: relative;
-          width: 90%;
-          top: 0%;
-          left: 0%;
+        p {
+          font-size: 1.8rem;
+          color: #fff;
+          text-align: left;
+          font-weight: 500;
+          margin: 1rem 0;
         }
       }
     }
@@ -117,7 +126,7 @@
       flex-direction: column;
       justify-content: space-between;
       position: relative;
-      color: #000;
+      color: #fff;
       width: 45%;
       z-index: 9999;
       font-size: 1.9rem;
@@ -127,6 +136,10 @@
         display: flex;
         flex-direction: column;
         padding: 2rem 0;
+
+        p {
+          text-align: left;
+        }
       }
 
       ul {
@@ -145,14 +158,14 @@
           }
           h5 {
             margin: 0px;
-            color: #000;
+            color: #fff;
           }
         }
       }
 
       h3.overview-subheaders {
         font-size: 2.4rem;
-        color: #000;
+        color: #fff;
         text-align: left;
         font-weight: 600;
         margin: 0px;
