--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,10 +1,12 @@
 footer {
-  background-color: #1b1822;
+  background-color: #000;
   display: flex;
+  border-top: 1px solid #bdebff;
   justify-content: space-between;
   align-items: center;
   text-align: center;
   margin-top: auto;
+  font-size: 1.3rem;
   padding: 8px;
 
   .footer-link-container {
