--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,12 +10,18 @@
   position: relative;
 }
 
+.border-list {
+  border-left: 5px solid #fff;
+  padding-left: 4rem;
+  margin: 2rem 0;
+}
+
 .hide {
   display: none;
 }
 
 .highlight {
-  color: #000000;
+  color: #afe4ff;
   font-weight: 500;
 }
 
@@ -93,10 +99,10 @@
 .button-link {
   display: inline-block;
   padding: 1rem 2rem;
-  border: 1px solid black;
+  border: 1px solid #fff;
   border-radius: 10rem;
   background-color: transparent;
-  color: #000;
+  color: #fff;
   font-size: 1.2rem;
   font-weight: 400;
   margin: 1rem 0;
@@ -120,7 +126,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background: #1b1c1e;
+  background: #ffffff7a;
   z-index: -1;
   border-radius: 10rem;
   transition: 0.45 ease all;
@@ -182,6 +188,8 @@
 .projects-page {
   width: 100%;
   height: 100%;
+  color: #fff;
+  background: #111213;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -214,7 +222,7 @@
       font-size: 5rem;
       cursor: pointer;
       font-family: sans-serif;
-      color: #000;
+      color: #fff;
       font-weight: 900;
       margin: 0;
       position: relative;
@@ -222,9 +230,8 @@
 
     h2 {
       font-size: 1.4rem;
-      color: #000;
       position: relative;
-      color: #000;
+      color: #fff;
       cursor: pointer;
       text-align: center;
       margin: 0;
@@ -236,7 +243,7 @@
 
     p {
       font-size: 1.8rem;
-      color: #000;
+      color: #fff;
       font-family: sans-serif;
       min-width: fit-content;
       animation: fadeIn 2s 2s backwards;
@@ -258,13 +265,13 @@
     .hover-link {
       text-decoration: none;
       font-size: 1.8rem;
-      color: #000;
+      color: #fff;
       font-family: sans-serif;
       font-weight: 400;
       min-width: fit-content;
 
       &:hover {
-        color: #000;
+        color: #fff;
       }
     }
   }
@@ -290,7 +297,7 @@
     }
 
     &:hover {
-      color: black;
+      color: #00000050;
     }
   }
   .button-link::after {
