--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,5 +1,5 @@
 .nav {
-  background: #000000c5;
+  background: #000000d5;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -26,25 +26,32 @@
       position: relative;
       display: flex;
       align-items: center;
-      font-family: "Coolvetica";
+      font-family: sans-serif;
       letter-spacing: 3px;
       text-decoration: none;
     }
   }
 
   .home-text {
-    color: #fff;
+    color: #ffffff;
     justify-self: flex-start;
     cursor: pointer;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     position: relative;
     margin: 0 3rem;
+    font-weight: 800;
     display: flex;
     align-items: center;
-    font-family: "Coolvetica";
+    font-family: sans-serif;
     letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase;
+
+    &:hover {
+      color: #ffffff70;
+      transition: all 0.5s ease-in-out;
+      transform: scale(0.9);
+    }
 
     @media screen and (max-width: 768px) {
       display: none;
@@ -70,33 +77,26 @@
       color: #fff;
       justify-self: center;
       cursor: pointer;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       position: relative;
       margin: 0 3rem;
+      font-weight: 800;
       display: flex;
       align-items: center;
-      font-family: "Coolvetica";
+      font-family: sans-serif;
       letter-spacing: 3px;
       text-decoration: none;
       text-transform: uppercase;
 
       &:hover {
-        border-bottom: 3px solid #3cefff;
+        color: #ffffff70;
+        transition: all 0.5s ease-in-out;
+        transform: scale(0.95);
       }
 
       @media screen and (max-width: 768px) {
         display: none;
       }
     }
-  }
-}
-
-.shrink {
-  transition: all 0.2s ease-in-out;
-
-  &:hover {
-    color: #3cefff;
-    letter-spacing: 1px;
-    transform: scale(0.95);
   }
 }
