--- a/src/components/Projects/inHandy/index.scss
+++ b/src/components/Projects/inHandy/index.scss
@@ -1,7 +1,7 @@
 .inhandy {
   height: auto;
   padding: 0px;
-  color: #111213;
+  color: #fff;
 
   .animate-text-hover {
     min-width: 10px;
@@ -22,23 +22,23 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    color: #1129ff;
-    border: 1px solid #1129ff;
+    color: #485aff;
+    border: 1px solid #485aff;
 
     &:hover {
       color: white;
     }
   }
   .button-link::after {
-    background: #1129ff;
+    background: #485aff;
   }
 
   .vd {
-    border-left: 2px solid #00000060;
+    border-left: 2px solid #ffffff60;
   }
 
   .hd {
-    border-bottom: 1px solid #00000060;
+    border-bottom: 1px solid #ffffff60;
   }
 
   .header-zone {
@@ -47,11 +47,11 @@
     text-align: center;
 
     h1 {
-      color: #111213;
+      color: #fff;
       margin-bottom: 2px;
     }
     h2 {
-      color: #111213;
+      color: #fff;
       font-size: 2.2rem;
       letter-spacing: 0px;
     }
@@ -65,6 +65,7 @@
 
       @media screen and (max-width: 800px) {
         width: 300px;
+        margin: auto;
       }
     }
 
@@ -91,15 +92,13 @@
         padding: 0.5rem;
         margin: 0.5rem;
         border: solid 1px #1129ff;
-        background: #7a94fd;
+        background: #7a94fdb6;
         color: white;
         border-radius: 4px;
 
         svg {
           margin: 0 2rem 0 0;
         }
-
-        filter: drop-shadow(4px 4px 8px #999999);
       }
     }
 
@@ -126,15 +125,13 @@
         padding: 0.5rem;
         margin: 0.5rem;
         border: solid 1px #18ce1b;
-        background: #11d011;
+        background: #11d011b6;
         color: white;
         border-radius: 4px;
 
         svg {
           margin: 0 2rem 0 0;
         }
-
-        filter: drop-shadow(2px 2px 3px #bdbdbd);
       }
     }
 
