--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -162,7 +162,7 @@
   align-items: center;
   margin: 3rem 0;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   transform-style: preserve-3d;
   animation: fadeIn 1.5s forwards;
   animation-delay: 1s;
