--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -16,7 +16,6 @@
     text-align: left;
     justify-content: space-evenly;
 
-
     h1 {
       width: 100%;
       margin: 0px;
@@ -109,7 +108,7 @@
     }
 
     .flat-button {
-      color: #000;
+      color: #fff;
       font-size: 13px;
       font-weight: 400;
       letter-spacing: 4px;
@@ -118,16 +117,16 @@
       font-family: sans-serif;
       text-decoration: none;
       padding: 10px 18px;
-      border: 1px solid #000;
+      border: 1px solid #fff;
       border-radius: 8px;
       animation: fadeIn 2s 2.5s backwards;
       white-space: nowrap;
+      transition-duration: 0.5s;
 
       &:hover {
-        color: #fff;
-        border: 1px solid #000;
-        background-color: #21232a;
-        transition-duration: 0.3s;
+        color: #000;
+        border: 1px solid #ffffff;
+        background-color: #c3c3c3;
       }
     }
   }
