--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,4 +1,15 @@
 .projects-page {
+  .header-backdrop {
+    width: 100%;
+    padding: 5rem 0;
+    z-index: 0;
+    justify-content: space-around;
+    background-image: url("https://wallpaperaccess.com/full/1930779.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+  }
+
   .card {
     width: 30%;
     display: flex;
@@ -10,7 +21,12 @@
     background: #454652;
     margin: 2rem 2rem;
     padding: 2rem 2rem;
-    transition: all 0.8s ease-in-out;
+    transition: all 0.6s ease-in-out;
+
+    @media screen and (max-width: 800px) {
+      width: 90%;
+      margin: 2.4rem 0;
+    }
 
     &:hover {
       background: #26272e;
