--- a/src/components/Navbar/MobileMenu/index.scss
+++ b/src/components/Navbar/MobileMenu/index.scss
@@ -13,22 +13,34 @@
 }
 
 .link-container {
+  transition: all 0.8s linear;
+
   .nav-links {
     display: flex;
     position: absolute;
     width: 100%;
     top: 85%;
     left: 0;
+    list-style: none;
     background-color: #000000f1;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     transition: all 0.8s linear;
 
+    li,
     a {
-      color: #FFFFFF;
+      color: #ffffff;
       text-decoration: none;
       font-size: 2.8rem;
+      font-weight: 400;
       margin: 2rem 0;
+    }
+
+    .link-group {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
     }
   }
 }
