--- a/src/components/ArrowToTop/index.scss
+++ b/src/components/ArrowToTop/index.scss
@@ -1,18 +1,19 @@
 .to-top {
   position: fixed;
   z-index: 9999999;
-  color: #ffffff90;
-  font-size: 3rem;
+  color: #ffffff42;
+  font-size: 8rem;
   bottom: 5%;
   right: 5%;
+  transition-duration: 0.4s;
 
   &:hover {
     color: #ffffff;
-    animation-duration: 1.2s;
   }
 
   @media screen and (max-width: 768px) {
     bottom: 10%;
     right: 10%;
+    font-size: 3rem;
   }
 }
