--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -16,6 +16,11 @@
     text-align: left;
     justify-content: space-evenly;
 
+    img.imageMeme {
+      width: 200px;
+      margin: 2rem 0;
+    }
+
     h1 {
       width: 100%;
       margin: 0px;
@@ -52,6 +57,10 @@
       padding: 0px;
     }
 
+    form {
+      text-align: right;
+    }
+
     ul {
       padding: 0;
       margin: 0;
@@ -84,9 +93,9 @@
     input[type="text"],
     input[type="email"] {
       width: 100%;
-      border: 0;
+      border: 1px solid #ffffff;
       border-radius: 6px;
-      background-color: #ebeeee;
+      background: transparent;
       height: 50px;
       font-size: 16px;
       color: #000;
@@ -96,9 +105,9 @@
 
     textarea {
       width: 100%;
-      border: 0;
+      border: 1px solid #ffffff;
       border-radius: 6px;
-      background: #ebeeee;
+      background: transparent;
       height: 50px;
       font-size: 16px;
       color: #000;
@@ -108,25 +117,25 @@
     }
 
     .flat-button {
-      color: #fff;
+      color: #d0acff;
       font-size: 13px;
       font-weight: 400;
       letter-spacing: 4px;
-      width: 100%;
+      width: 20%;
       background: transparent;
       font-family: sans-serif;
       text-decoration: none;
       padding: 10px 18px;
-      border: 1px solid #fff;
+      border: 1px solid #d0acff;
       border-radius: 8px;
       animation: fadeIn 2s 2.5s backwards;
       white-space: nowrap;
       transition-duration: 0.5s;
 
       &:hover {
-        color: #000;
+        color: #fff;
         border: 1px solid #ffffff;
-        background-color: #c3c3c3;
+        background: #984aff;
       }
     }
   }
