--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -29,6 +29,19 @@ $color-outline: #7f7f7f80;
     justify-content: space-between;
     height: 100%;
     width: auto;
+
+    h1 {
+      font-size: 8rem;
+      @media screen and (max-width: 800px) {
+        font-size: 6rem;
+      }
+    }
+    h2 {
+      font-size: 2rem;
+      @media screen and (max-width: 800px) {
+        font-size: 1.4rem;
+      }
+    }
   }
 
   .project-container {
