--- a/src/components/AboutFull/index.scss
+++ b/src/components/AboutFull/index.scss
@@ -45,6 +45,10 @@
     }
   }
 
+  .border-list {
+    border-left: 4px solid #00ff80;
+  }
+
   .overview-col {
     width: 100%;
     align-items: center;
